Modification du JS

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main class="main">
       <div class="title">
-        <h2>Barça France</h2>
+        <h2>Barça FanPage</h2>
         <p>@barcaFan</p>
         <p class="description">
           Découvrez toute l'actualitée du FC Barcelone en Français sur notre compte. 
@@ -52,6 +52,35 @@
         <p><b>115K</b> <span>abonnés</span></p>
       </div>
     </main>
+
+    <div class="notification-box">
+      <div class="notification-header">
+        <h2>Notifications de compte</h2>
+        <p>@barcaFan</p>
+      </div>
+      <div class="notif notif-1">
+        <div>
+          <h3>Tous les Tweets</h3>
+          <p>Recevez des notifications pour les tous Tweets de ce compte.</p>
+        </div>
+        <i class="uil uil-check-circle check active"></i>
+      </div>
+      <div class="notif notif-2">
+        <div>
+          <h3>Seulement les vidéos en direct</h3>
+          <p>Recevez uniquement des notifications pour les diffusions en direct.</p>
+        </div>
+        <i class="uil uil-check-circle check"></i>
+      </div>
+      <div class="notif notif-3">
+        <div>
+          <h3>Désactivé</h3>
+          <p>Désactivé les notifications pour les Tweets de ce compte.</p>
+        </div>
+        <i class="uil uil-check-circle check"></i>
+      </div>
+    </div>
+    
   </div>
   <script src="./script.js"></script>
 </body>
